--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -8,7 +8,7 @@ h6: 18px /
 normal: 16px / 1rem
 $almostNormalSize: 14px / 0.875rem
 $smallSize: 12px / 0.75 rem
-$verySmallSize: 9px / 0.56rem 
+$verySmallSize: 9px / 0.  56rem 
 $tinySize: 7px
 small:80% -> 12.8px / 0.8rem
  
@@ -1199,9 +1199,25 @@ newsCard
   /* border: 1px solid $grey-2; */
 }
 
+.text-newsCard::after {
+    content: "";
+    width: 100px;
+    height: 20px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 56%, rgba(255,255,255,1) 100%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(56%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,1)));
+    background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%,rgba(255,255,255,1) 100%);
+    background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%,rgba(255,255,255,1) 100%);
+    background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%,rgba(255,255,255,1) 100%);
+    background: linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%,rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 );
+}
+
 .infoContainer-newCard{
   width: 100%;
-  height: 98px;
+  height: 96px;
   margin-bottom: 0.3rem;
   overflow: hidden;
   position: relative;
@@ -1210,7 +1226,7 @@ newsCard
   }
   .title-newsCard{
     padding-top: 0.5rem;
-    margin-bottom: 0.15rem;
+    /* margin-bottom: 0.15rem; */
     font-weight: bold;
     cursor: pointer;
   }
@@ -1225,9 +1241,10 @@ newsCard
 
 .dots-info-newsCard{
   position: absolute;
-  top: 216px;
-  right: 0px;
   color: $blue-pard;
+  position: absolute;
+  right: 20px;
+  bottom: 24px;
 }
 
 .date-newsCard{
