--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -815,6 +815,7 @@ Profile Card
 
 .profileCard{
   /* box-shadow: 0px 1px 2px 1px rgba(10, 10, 10, 0.2); */
+  background-color: white;
   box-shadow: 0px 1px 3px 0px rgba(10, 10, 10, 0.2);
   display: block;
   line-height: 0;
@@ -826,7 +827,7 @@ Profile Card
   position:relative;
   margin:0 auto;
   font-size: 12px;
-  border: 2px solid;
+  border: 1px solid rgba(10, 10, 10, 0.2);
   @include breakpoint(medium){
     width: 174px;
     height: 14.25rem;
