--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1128,9 +1128,9 @@ main.mainUserPage{
 .createProfileCard-userPage{
   margin: 0.9rem 0.9rem 1rem 0.9rem;
   display: inline-block;
-  a{
+  /* a{
     border: 1px solid rgb(206, 206, 206) !important;
-  }
+  } */
   transition: box-shadow 200ms ease-out;
 }
 
@@ -1155,15 +1155,29 @@ main.mainUserPage{
   color: black;
   font-size: 2.3rem;
   margin-top: 52%;
-  position: relative;
+  z-index:2;
+  @include horizontal-center;
   @include breakpoint(small down) {
     font-size: 4vh;
     margin-top: 49%;
   }
 }
 
+.upperBox-cerateProfileCard{
+  background-color: $grey-2;
+  width: 100%;
+  height: 48.5%;
+  position: relative;
+}
+
+.downBox-cerateProfileCard{
+  background-color: $grey-1;
+  height: 51.5%;
+  position: relative;
+}
+
 .create-profile-card-text{
-  margin-top: 0.2rem;
+  padding-top: 11%;
   text-align: center;
   color: black;
   font-weight: bold;
