--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2092,3 +2092,26 @@ TOOLTIP
 
 
 
+.coockies-callout{
+  background-color: rgba(222, 222, 222, 0.9);
+  padding: 0.1rem 2.5rem;
+  position: fixed;
+  z-index: 3;
+  bottom: 0;
+  font-size: $almostNormalSize;
+  width: 100%;
+  p{
+    margin: 0;
+    line-height: 1.4rem;
+  }
+  .closeBtn-coockies-callout{
+    margin: 0rem 0px 0px 1.5rem;
+    float: right;
+    position: relative;
+    color: $grey-4;
+  }
+  .closeBtn-coockies-callout:hover{
+    color:  black;
+  }
+}
+
