--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -263,14 +263,16 @@ main.mainWelcomePage{
 }
 
 .littleTextDiv{
-  height: 6.2rem;
   position: relative;
   text-align: center;
   margin: 0.4rem 0;
   width: 100%;
   background: $grey-1;
+  h4{
+    margin: 0;
+  }
   .welcomeSection-container{
-    padding: 2.1rem 0;
+    padding: 2.5rem 0;
   }
 }
 
@@ -326,61 +328,15 @@ main.mainWelcomePage{
   height: 100%;
   display: inline-block;
   position: relative;
+  vertical-align: top;
 }
 
-.contactDiv{
-  position: relative;
-  width: 100vw;
-  margin-top: 0.4rem;
-  /* margin: 0.5rem 0 1.5rem 0; */
-  background: $grey-1;
-  .welcomeSection-container{
-    padding: 5rem 0;
-    position: relative;
-  }
-  .longText{
-    /* font-size: $almostNormalSize; */
-    color: $grey-4;
-    text-align: center;
-    @include horizontal-center;
-    position: relative;
-    width: 48rem;
-    margin-top: 3rem;
-    p{
-      margin-bottom: 1.5rem;
-    }
-  }
- /*  .contactForm-container{
-    width: 28rem;
-    text-align: center;
-    @include horizontal-center;
-    position: relative;
-    margin-top: 2.5rem;
-    input{
-      font-size: $almostNormalSize;
-      height: auto;
-      border: none;
-      box-shadow: none;
-    }
-    textarea{
-      font-size: $almostNormalSize;
-      border: none;
-      box-shadow: none;
-    }
-    button{
-      width: 9rem;
-      height: 3rem;
-      font-size: $almostNormalSize;
-      margin-top: 1rem;
-    }
-  } */
-}
 
 .servicesDiv{
   margin-top: 0.4rem;
   background-color: black;
   color: white;
-  padding: 2.5rem 0;
+  padding: 3rem 0;
   .logo-services{
     background-image: url(<%= image_path 'orfheologoblanco_small.png' %>);
     width: 144px;
@@ -398,8 +354,35 @@ main.mainWelcomePage{
     text-align: center;
     text-transform: uppercase;
     font-size: $smallSize;
-    margin-bottom: 2.5rem;
+    margin-bottom: 3rem;
   }
+}
+
+.callServices-innerCont, .consulingService-innerCont, .apiService-innerCont{
+  width: 16rem;
+  text-align: center;
+  p{
+    font-size: $almostNormalSize;
+    margin: 0;
+    color: $grey-2;
+  }
+  .material-icons{
+    font-size: 3.5rem;
+    margin-bottom: 1.5rem;
+    color: $blue-pard;
+  }
+}
+
+.callServices-innerCont{
+  left: 0;
+}
+.apiService-innerCont{
+  position: absolute;
+  right: 0;
+}
+.consulingService-innerCont{
+  @include horizontal-center;
+  position: relative;
 }
 
 
