files reordered and little design details

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2960,7 +2960,7 @@ tr.permanent-row-program-table-call-manager td{
   left: 4.5rem;
   padding-left: 2.5rem;
   padding-top: 0.3rem;
-  border-left: 1px solid $grey-4;
+  /* border-left: 1px solid $grey-4; */
   input{
     margin-bottom: 0;
   }
