--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1321,7 +1321,7 @@ ul.dropdownMenu{
 }
 
 .black .iconDropdown-clicked{
-  color: $grey-2 !important;
+  color: $grey-3 !important;
 }
 
 .container-insideMenu{
@@ -1330,6 +1330,340 @@ ul.dropdownMenu{
   left: -10.5rem !important;
   top: 2rem !important;
 }
+
+/*==============================================
+HEADER
+===============================================*/
+
+.orfheoHeader{
+  width: 100%;
+  background-color: white;
+  top: 0;
+  margin: auto;
+  font-size: $almostNormalSize;
+  z-index: 3;
+  position: relative;
+  min-height: 3.3rem;
+  @include breakpoint(medium down){
+    padding: 0.5rem;
+  }
+}
+.black{
+  background-color: black;
+}
+.fixed{
+  position: fixed;
+}
+
+.containerHeader{
+  width: 984px;
+  height: 100%;
+  @include horizontal-center; 
+}
+
+.contentHeader{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.logoBtn-navHeader{
+  display: inline-block;
+  margin-top: 0.8rem;
+  /* @include horizontal-center; */
+  button{
+    margin: 0;
+  }
+}
+
+.black .logo-header{
+  background-image: url(<%= image_path 'orfheologoblanco_small.png' %>);
+}
+
+.container-loginNavHeader{
+  width: 17rem !important;;
+  height: 13.5rem !important;;
+  top: 2rem !important;
+  left: -220px !important;
+  padding: 0;
+  form{
+    margin: 0;
+    @include horizontal-center;
+    top: 2rem;
+    input{
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+.loginContainer{
+  position: absolute;
+  right: 0;
+  top: 0.85rem;
+  .loginText{
+    color: black;
+    display: inline-block;
+    vertical-align: -.4rem;
+    margin-right: 1rem;
+  }
+  .loginText:hover{
+    color: rgba(0,0,0,.8);
+    /* color: $grey-2; */
+  }
+  .signUp-welcomePage{
+    vertical-align: middle;
+    display: inline-block;
+  }
+  .arrowLoginDropdown{
+    font-size: 22px;
+    margin-left: -0.2rem;
+    vertical-align: -.5rem;
+  }
+}
+
+.black .loginText{
+  color: white;
+}
+.black .loginText:hover{
+  color: $grey-2;
+}
+
+
+.navMenuHeader{
+  margin: 0;
+  li{
+    display: inline-block;
+    text-transform: capitalize;
+    margin: 0 0 0 1.5rem;
+    /* min-width: 90px; */
+    text-align: center;
+    a{
+      color: white;
+    }
+    a:hover{
+      color: $grey-2;
+    }
+  }
+  .selected, .selected:hover{
+    a{
+      color: $grey-3;
+    }
+  }
+}
+
+.navMenuHeader-container{
+  position: relative;
+  display: inline-block;
+  vertical-align: 1px;
+}
+
+.signUpBtn-container{
+  width: 100%;
+  text-align: center;
+  margin-top: 2.5rem;
+  margin-bottom: 0.8rem;
+}
+
+.signUpHeader-welcomePage{
+  color: $element-color;
+  font-weight: bold;
+  @include border-radius($element-border-radius);
+  background: $blue-pard;
+  /* padding: 0.4rem 1.8rem; */
+  padding: 0.3rem 0.8rem;
+  vertical-align: middle;
+  @include breakpoint(small down){
+    position: absolute;
+    right: $inner-spacing;
+    top: $inner-spacing;
+    font-size: $almostNormalSize;
+    padding: 0.25rem 0.5rem;  
+  }
+}
+
+.signUpHeader-welcomePage:hover{
+  background: rgb(44, 106, 204); 
+  /* rgba(56, 133, 255,0.8); */
+}
+
+.loginText-welcomePage{
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+}
+
+.login-container{
+  position: relative;
+  width: 240px;
+  margin-top: 2.5rem;
+  input.input-login-field{
+    width: 100%;
+    display: block;
+    font-size: $almostNormalSize;
+    height: 30px;
+  }
+  .login-btn{
+    float: right;
+    padding: 0.35rem 1.8rem;
+  }
+  .passwdRecovery{
+    /* margin-top: 1rem; */
+    float: none;
+    text-align: center;
+    display: inline-block;
+    width: 80%;
+    border-top: 1px solid $grey-2;
+    padding: 0.5rem;
+    margin-top: 0.1rem;
+    margin-left: 1.5rem;
+  }
+  .rememberMe-ckb label{
+    /* font-size: $almostNormalSize; */
+  }
+}
+
+.makeCallBtn{
+  background: #333333;
+  @include border-radius($element-border-radius);
+  padding: .3rem .8rem;
+  color: white;
+  font-weight: bold;
+  vertical-align: middle;
+  right: 12rem;
+  top: .8rem;
+  position: absolute;
+}
+
+.makeCallBtn:hover{
+  background: #212121;
+}
+
+
+/* --------------
+login
+-------------- */
+
+@media only screen and #{breakpoint(small down)} { 
+  .block-for-medium {
+    display: block;
+    width: 100%;
+  }
+  .login-bar, .user-bar{
+    width: 100%;
+    background: $content-background;
+  }
+  .menu-icon-header{
+    margin-left:0.5rem;
+  }
+}
+
+
+.top-bar-right .input-login{
+  float: right; 
+} 
+
+.input-login {
+ @include breakpoint(small down){
+    display: block;
+    padding-top: 0.5rem;
+    .input-login-field {
+      margin-bottom: 0.1rem;
+    }
+  }
+  @include breakpoint(medium){
+    .input-login-field, .input-loginEvent-field {
+      display:inline-block;
+      margin-right:0.4rem;
+    }
+  }
+  @include breakpoint(large){
+    margin-right:-0.75rem;
+  }  
+  .input-login-field{
+    height: auto;
+    font-size: $smallSize;
+    width: 180px;
+    padding: 0.3rem
+  }
+  .input-loginEvent-field{
+    height: auto;
+    font-size: $almostNormalSize;
+    width: 14rem;
+    padding: 0.3rem
+  }
+}
+
+.dropdown.menu:not(.vertical) .is-dropdown-submenu.first-sub {
+    top: 100%;
+    left: auto;
+    right: 0;
+    z-index: 10;
+}
+
+.space-column-header .dropdown.menu:not(.vertical) .is-dropdown-submenu.first-sub {
+    top: 100%;
+    left: auto;
+    right: 0.3rem;
+    z-index: 10;
+}
+
+
+
+.rememberMe-ckb input{
+  width:auto;
+  margin-right:0;
+  margin-top: 0.2rem;
+}
+
+.rememberMe-ckb{
+  @include breakpoint(small down){
+    float: right;
+  }
+}
+
+.passwdRecovery{
+  @include breakpoint(small down){
+    display: block;
+    margin-top: 0.2rem;
+    white-space: nowrap;
+  }
+}
+
+.rememberMe-ckb {
+  @include breakpoint(medium){
+    width: 10rem;
+    display: block;
+    margin-left: 0.1rem;
+  }
+}
+
+.passwdRecovery, .rememberMe-ckb label{
+   font-size: $smallSize;
+}
+
+.passwdRecovery{
+  @include breakpoint(medium){
+    float: right;
+    margin-top: -1.3rem;
+    margin-right: 5rem;
+  } 
+}
+
+.passwdRecovery-eventLogin{
+  font-size: $smallSize;
+  @include breakpoint(medium){
+    float: right;
+    margin-top: -0.8rem;
+    margin-right: 13rem;
+  } 
+  @include breakpoint(small down){
+    display: block;
+    margin-top: 0.2rem;
+    white-space: nowrap;
+  }
+}
+
+
 
 /*==============================================
 FOOTER
@@ -1365,7 +1699,7 @@ a.footer-text-link:hover{
 }
 
 .rightFooter-menu{
-  font-size: $almostNormalSize;
+  font-size: $smallSize;
   margin: 0;
   margin-top: -0.2rem;
   li{
@@ -2071,7 +2405,7 @@ IMAGES
 
 .logo-header{
   cursor: pointer;
-  background-image: url(<%= image_path 'orfheologocolor.png' %>);
+  background-image: url(<%= image_path 'orfheologonegro.png' %>);
   width: 77px;
   height: 24px;
   background-repeat: no-repeat;
